--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -1,11 +1,11 @@
 {
 	"expo": {
-		"name": "opencoder",
+		"name": "OpenCoder",
 		"slug": "opencoder",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/icon.png",
-		"scheme": "mybettertapp",
+		"scheme": "opencoder",
 		"userInterfaceStyle": "automatic",
 		"newArchEnabled": true,
 		"ios": {
@@ -20,7 +20,7 @@
 			},
 			"edgeToEdgeEnabled": true,
 			"predictiveBackGestureEnabled": false,
-			"package": "com.anonymous.mybettertapp"
+			"package": "com.github.shekohex.opencoder"
 		},
 		"web": {
 			"output": "static",
