--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -17,28 +17,30 @@
 		"@react-navigation/native": "^7.0.14",
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.90.12",
+		"dotenv": "catalog:",
 		"expo": "^54.0.1",
 		"expo-constants": "~18.0.8",
 		"expo-crypto": "~15.0.6",
 		"expo-linking": "~8.0.7",
 		"expo-navigation-bar": "~5.0.8",
 		"expo-network": "~8.0.7",
-		"expo-router": "~6.0.0",
-		"expo-secure-store": "~15.0.6",
-		"expo-splash-screen": "~31.0.8",
+		"expo-router": "~6.0.20",
+		"expo-secure-store": "~15.0.8",
+		"expo-splash-screen": "~31.0.12",
 		"expo-status-bar": "~3.0.7",
 		"expo-system-ui": "~6.0.7",
 		"expo-web-browser": "~15.0.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"react-native": "0.81.4",
+		"react-native": "0.81.5",
 		"react-native-gesture-handler": "~2.28.0",
+		"react-native-mmkv": "^4.1.0",
+		"react-native-nitro-modules": "^0.31.10",
 		"react-native-reanimated": "~4.1.0",
 		"react-native-safe-area-context": "~5.6.0",
 		"react-native-screens": "~4.16.0",
 		"react-native-web": "^0.21.0",
-		"react-native-worklets": "^0.5.1",
-		"dotenv": "catalog:",
+		"react-native-worklets": "0.5.1",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
