feat(auth): refactor router for protected routes and auth state
- Implement session management with SessionProvider
- Add secure storage hook for token persistence
- Restructure app router into protected (app) and public routes
- Add sign-in placeholder screen
- Update root layout to handle auth flow and splash screen
- Closes task oc-dtl

--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"main": "expo-router/entry",
 	"scripts": {
+		"check": "biome check --write .",
 		"dev": "expo start --clear",
 		"android": "expo run:android",
 		"ios": "expo run:ios",
