--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -19,15 +19,15 @@
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.90.12",
 		"dotenv": "catalog:",
-		"expo": "^54.0.1",
+		"expo": "~54.0.30",
 		"expo-constants": "~18.0.8",
 		"expo-crypto": "~15.0.6",
-		"expo-linking": "~8.0.7",
+		"expo-linking": "~8.0.11",
 		"expo-navigation-bar": "~5.0.8",
 		"expo-network": "~8.0.7",
-		"expo-router": "~6.0.20",
+		"expo-router": "~6.0.21",
 		"expo-secure-store": "~15.0.8",
-		"expo-splash-screen": "~31.0.12",
+		"expo-splash-screen": "~31.0.13",
 		"expo-status-bar": "~3.0.7",
 		"expo-system-ui": "~6.0.7",
 		"expo-web-browser": "~15.0.6",
