--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"catalog": {
 			"dotenv": "^17.2.2",
 			"zod": "^4.1.13",
-			"typescript": "^5"
+			"typescript": "^5",
+			"@types/node": "^24"
 		}
 	},
 	"scripts": {
