--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -42,7 +42,9 @@
 		"react-native-screens": "~4.16.0",
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
-		"zod": "catalog:"
+		"zod": "catalog:",
+		"@opencode-ai/sdk": "^1.0",
+		"@coder/sdk": "workspace:*"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
