--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,7 +12,9 @@
 		"check-types": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@coder/sdk": "workspace:*",
 		"@expo/vector-icons": "^15.0.2",
+		"@opencode-ai/sdk": "^1.0",
 		"@react-navigation/bottom-tabs": "^7.2.0",
 		"@react-navigation/drawer": "^7.1.1",
 		"@react-navigation/native": "^7.0.14",
@@ -42,9 +44,9 @@
 		"react-native-screens": "~4.16.0",
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
-		"zod": "catalog:",
-		"@opencode-ai/sdk": "^1.0",
-		"@coder/sdk": "workspace:*"
+		"tailwindcss": "^4.1.18",
+		"uniwind": "^1.2.2",
+		"zod": "catalog:"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
