--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -15,6 +15,10 @@
 		"@coder/sdk": "workspace:*",
 		"@expo/vector-icons": "^15.0.2",
 		"@opencode-ai/sdk": "^1.0",
+		"@react-native-aria/focus": "^0.2.9",
+		"@react-native-aria/interactions": "^0.2.16",
+		"@react-native-aria/listbox": "^0.2.9",
+		"@react-native-aria/overlays": "^0.3.15",
 		"@react-navigation/bottom-tabs": "^7.2.0",
 		"@react-navigation/drawer": "^7.1.1",
 		"@react-navigation/native": "^7.0.14",
@@ -44,6 +48,7 @@
 		"react-native-screens": "~4.16.0",
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
+		"react-stately": "^3.43.0",
 		"tailwindcss": "^4.1.18",
 		"uniwind": "^1.2.2",
 		"zod": "catalog:"
