--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "expo-router/entry",
 	"scripts": {
-		"check": "biome check --write .",
+		"check": "biome check --unsafe --write .",
 		"dev": "expo start --clear",
 		"android": "expo run:android",
 		"ios": "expo run:ios",
