--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		}
 	},
 	"scripts": {
-		"check": "biome check --write .",
+		"check": "biome check --unsafe --write .",
 		"prepare": "husky",
 		"dev": "turbo dev",
 		"build": "turbo build",
@@ -37,7 +37,7 @@
 	},
 	"lint-staged": {
 		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
-			"biome check --write ."
+			"biome check --unsafe --write ."
 		]
 	},
 	"packageManager": "bun@1.3.1"
