--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -14,6 +14,10 @@
 	},
 	"dependencies": {
 		"@coder/sdk": "workspace:*",
+		"@expo-google-fonts/ibm-plex-mono": "^0.4.1",
+		"@expo-google-fonts/inter": "^0.4.2",
+		"@expo-google-fonts/jetbrains-mono": "^0.4.1",
+		"@expo-google-fonts/manrope": "^0.4.2",
 		"@expo/vector-icons": "^15.0.2",
 		"@opencode-ai/sdk": "^1.0",
 		"@react-native-aria/focus": "^0.2.9",
@@ -29,6 +33,7 @@
 		"expo": "~54.0.30",
 		"expo-constants": "~18.0.8",
 		"expo-crypto": "~15.0.6",
+		"expo-font": "^14.0.10",
 		"expo-linking": "~8.0.11",
 		"expo-navigation-bar": "~5.0.8",
 		"expo-network": "~8.0.7",
