--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 			"!**/wrangler.jsonc",
 			"!**/.source",
 			"!**/convex/_generated",
-			"!.agent/skills"
+			"!.agent/skills",
+			"!.opencode/skill"
 		]
 	},
 	"formatter": {
