--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -27,6 +27,7 @@
 		"@react-navigation/bottom-tabs": "^7.2.0",
 		"@react-navigation/drawer": "^7.1.1",
 		"@react-navigation/native": "^7.0.14",
+		"@react-types/shared": "^3.32.1",
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.90.12",
 		"dotenv": "catalog:",
@@ -61,9 +62,9 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
+		"@opencoder/config": "workspace:*",
 		"@types/react": "~19.1.10",
-		"typescript": "catalog:",
-		"@opencoder/config": "workspace:*"
+		"typescript": "catalog:"
 	},
 	"private": true
 }
