--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -46,6 +46,7 @@
 		"expo-web-browser": "~15.0.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-hotkeys-hook": "^5.2.1",
 		"react-native": "0.81.5",
 		"react-native-gesture-handler": "~2.28.0",
 		"react-native-mmkv": "^4.1.0",
