--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -30,6 +30,7 @@
 		"@react-types/shared": "^3.32.1",
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.90.12",
+		"@tanstack/react-query-devtools": "^5.90.12",
 		"dotenv": "catalog:",
 		"expo": "~54.0.30",
 		"expo-constants": "~18.0.8",
@@ -57,6 +58,7 @@
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
 		"react-stately": "^3.43.0",
+		"simple-icons": "^16.2.0",
 		"tailwindcss": "^4.1.18",
 		"uniwind": "^1.2.2",
 		"zod": "catalog:"
