feat: add external auth device and auth session context

--- a/packages/codersdk/package.json
+++ b/packages/codersdk/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@coder/sdk",
 	"version": "0.0.0",
+	"main": "src/index.ts",
 	"private": true,
 	"scripts": {
 		"check": "biome check --write .",
