--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -33,6 +33,7 @@
 		"@tanstack/react-query-devtools": "^5.90.12",
 		"dotenv": "catalog:",
 		"expo": "~54.0.30",
+		"expo-clipboard": "^8.0.8",
 		"expo-constants": "~18.0.8",
 		"expo-crypto": "~15.0.6",
 		"expo-font": "^14.0.10",
