test: stabilize native auth jest suite

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"turbo": "^2.6.3",
+		"@babel/runtime": "^7.28.4",
 		"@biomejs/biome": "^2.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.2",
