--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -10,7 +10,20 @@
 		"prebuild": "expo prebuild",
 		"web": "expo start --web",
 		"check-types": "tsc --noEmit",
-		"validate-themes": "bun scripts/validate-themes.ts"
+		"validate-themes": "bun scripts/validate-themes.ts",
+		"test": "jest"
+	},
+	"jest": {
+		"preset": "jest-expo",
+		"transformIgnorePatterns": [
+			"node_modules/(?!((?:\\.bun/.+?/node_modules/)?((jest-)?react-native|@react-native(-community)?|@react-native/.*|expo(nent)?|expo-modules-core|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|uniwind)))"
+		],
+		"moduleNameMapper": {
+			"^@/(.*)$": "<rootDir>/$1"
+		},
+		"setupFilesAfterEnv": [
+			"<rootDir>/jest.setup.js"
+		]
 	},
 	"dependencies": {
 		"@coder/sdk": "workspace:*",
@@ -52,10 +65,11 @@
 		"react-native": "0.81.5",
 		"react-native-gesture-handler": "~2.28.0",
 		"react-native-mmkv": "^4.1.0",
-		"react-native-nitro-modules": "^0.31.10",
+		"react-native-nitro-modules": "^0.32.0",
 		"react-native-reanimated": "~4.1.0",
 		"react-native-safe-area-context": "~5.6.0",
 		"react-native-screens": "~4.16.0",
+		"react-native-svg": "^15.15.1",
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
 		"react-stately": "^3.43.0",
@@ -66,8 +80,18 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
+		"@babel/preset-env": "^7.28.5",
+		"@babel/preset-typescript": "^7.28.5",
+		"@babel/runtime": "^7.28.4",
 		"@opencoder/config": "workspace:*",
+		"@testing-library/jest-native": "^5.4.3",
+		"@testing-library/react-native": "^13.3.3",
+		"@types/jest": "29.5.14",
 		"@types/react": "~19.1.10",
+		"babel-jest": "^30.2.0",
+		"babel-plugin-transform-flow-strip-types": "^6.22.0",
+		"jest": "~29.7.0",
+		"jest-expo": "~54.0.16",
 		"typescript": "catalog:"
 	},
 	"private": true
