fix(native): resolve Metro/Jest/TypeScript errors and test tooling
- Move test files from apps/native/app/** to apps/native/tests/** to avoid Metro route conflicts
- Update Jest config to pick up tests from tests/, lib/, and components/ directories
- Fix +not-found.tsx href from '/' to '/sign-in' for valid route type
- Fix device-flow-step.tsx timer type from NodeJS.Timeout to ReturnType<typeof setInterval>
- Fix tabs.tsx web-only props with @ts-ignore instead of @ts-expect-error
- Add root package.json 'test' script running turbo test
- Add turbo.json test task
- Fix @coder/sdk infinite recursion in test script (bun run test -> bun test)
- Close BD issues oc-0n9, oc-0az, oc-5d7

All quality gates pass: bun run test, bun run check, bun run check-types

--- a/packages/codersdk/package.json
+++ b/packages/codersdk/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"check": "biome check --write .",
 		"check-types": "tsc --noEmit",
-		"test": "bun run test"
+		"test": "bun test"
 	},
 	"dependencies": {
 		"@opencoder/config": "workspace:*"
