--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -23,6 +23,11 @@
 		},
 		"setupFilesAfterEnv": [
 			"<rootDir>/jest.setup.js"
+		],
+		"testMatch": [
+			"<rootDir>/tests/**/*.test.tsx",
+			"<rootDir>/lib/**/*.test.tsx",
+			"<rootDir>/components/**/*.test.tsx"
 		]
 	},
 	"dependencies": {
@@ -69,7 +74,7 @@
 		"react-native-reanimated": "~4.1.0",
 		"react-native-safe-area-context": "~5.6.0",
 		"react-native-screens": "~4.16.0",
-		"react-native-svg": "^15.15.1",
+		"react-native-svg": "^15.12.1",
 		"react-native-web": "^0.21.0",
 		"react-native-worklets": "0.5.1",
 		"react-stately": "^3.43.0",
