--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"check-types": "turbo check-types",
 		"typecheck": "turbo check-types",
 		"dev:native": "turbo -F native dev",
-		"dev:web": "turbo -F native web"
+		"dev:web": "turbo -F native web",
+		"test": "turbo test"
 	},
 	"dependencies": {
 		"dotenv": "catalog:",
