chore: include dependency changes

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -194,6 +194,12 @@
 						]
 					}
 				}
+			],
+			[
+				"expo-web-browser",
+				{
+					"experimentalLauncherActivity": true
+				}
 			]
 		],
 		"experiments": {
