--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -11,7 +11,7 @@
 		"web": "expo start --web",
 		"check-types": "tsc --noEmit",
 		"validate-themes": "bun scripts/validate-themes.ts",
-		"test": "jest"
+		"test": "jest --detectOpenHandles --runInBand --forceExit"
 	},
 	"jest": {
 		"preset": "jest-expo",
