feat(auth): implement CORS proxy for web and improve auth flow

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -24,7 +24,7 @@
 			"package": "com.github.shekohex.opencoder"
 		},
 		"web": {
-			"output": "static",
+			"output": "server",
 			"favicon": "./assets/images/favicon.png"
 		},
 		"plugins": [
