--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -27,7 +27,8 @@
 		"testMatch": [
 			"<rootDir>/tests/**/*.test.tsx",
 			"<rootDir>/lib/**/*.test.tsx",
-			"<rootDir>/components/**/*.test.tsx"
+			"<rootDir>/components/**/*.test.tsx",
+			"<rootDir>/app/**/*.test.ts"
 		]
 	},
 	"dependencies": {
@@ -60,6 +61,7 @@
 		"expo-network": "~8.0.7",
 		"expo-router": "~6.0.21",
 		"expo-secure-store": "~15.0.8",
+		"expo-server": "~1.0.5",
 		"expo-splash-screen": "~31.0.13",
 		"expo-status-bar": "~3.0.7",
 		"expo-system-ui": "~6.0.7",
