--- a/packages/branding/package.json
+++ b/packages/branding/package.json
@@ -6,17 +6,22 @@
 	"scripts": {
 		"check": "biome check --write .",
 		"check-types": "tsc --noEmit",
-		"build": "exit 0"
+		"generate-assets": "bun scripts/generate-assets.ts",
+		"build": "bun generate-assets && cp *.svg ../../apps/native/assets/images/"
 	},
+
 	"peerDependencies": {
 		"react": "*",
 		"react-native-svg": "*"
 	},
 	"devDependencies": {
+		"@expo-google-fonts/turret-road": "^0.4.1",
 		"@opencoder/config": "workspace:*",
-		"typescript": "catalog:",
 		"@types/bun": "^1.3.4",
 		"@types/node": "catalog:",
-		"bun-types": "^1.3.5"
+		"@types/opentype.js": "^1.3.8",
+		"bun-types": "^1.3.5",
+		"opentype.js": "^1.3.4",
+		"typescript": "catalog:"
 	}
 }
