--- a/packages/branding/tsconfig.json
+++ b/packages/branding/tsconfig.json
@@ -5,5 +5,5 @@
 		"jsx": "react-native",
 		"lib": ["DOM", "DOM.Iterable", "ESNext"]
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx"]
+	"include": ["src/**/*.ts", "src/**/*.tsx", "scripts/**/*.ts"]
 }
