--- a/packages/branding/package.json
+++ b/packages/branding/package.json
@@ -7,7 +7,7 @@
 		"check": "biome check --write .",
 		"check-types": "tsc --noEmit",
 		"generate-assets": "bun scripts/generate-assets.ts",
-		"build": "bun generate-assets && cp *.svg ../../apps/native/assets/images/"
+		"build": "bun generate-assets && cp *.svg *.png ../../apps/native/assets/images/"
 	},
 
 	"peerDependencies": {
@@ -20,6 +20,7 @@
 		"@types/bun": "^1.3.4",
 		"@types/node": "catalog:",
 		"@types/opentype.js": "^1.3.8",
+		"@resvg/resvg-js": "^2.6.2",
 		"bun-types": "^1.3.5",
 		"opentype.js": "^1.3.4",
 		"typescript": "catalog:"
