feat(native): integrate native UI components
- Install @expo/react-native-action-sheet and @gorhom/bottom-sheet
- Create dialog.native.tsx using Alert API for native platforms
- Create select.native.tsx using @expo/react-native-action-sheet
- Create BottomSheet component with native (@gorhom/bottom-sheet) and web implementations
- Add tests for dialog.native.tsx and select.native.tsx
- Remove custom animations on native platforms

Closes: oc-cq1, oc-0rh, oc-3g6, oc-972
Related: oc-o6p

--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -38,7 +38,9 @@
 		"@expo-google-fonts/jetbrains-mono": "^0.4.1",
 		"@expo-google-fonts/manrope": "^0.4.2",
 		"@expo-google-fonts/turret-road": "^0.4.1",
+		"@expo/react-native-action-sheet": "^4.1.1",
 		"@expo/vector-icons": "^15.0.2",
+		"@gorhom/bottom-sheet": "^5.2.8",
 		"@opencode-ai/sdk": "^1.0",
 		"@opencoder/branding": "workspace:*",
 		"@react-native-aria/focus": "^0.2.9",
