feat(native): replace workspace badges with icon tooltips

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
 			"!**/.source",
 			"!**/convex/_generated",
 			"!.agent/skills",
-			"!.opencode/skill"
+			"!.opencode/skill",
+			"!.opencode/plugin"
 		]
 	},
 	"formatter": {
