--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -47,9 +47,11 @@
 		"@react-native-aria/interactions": "^0.2.16",
 		"@react-native-aria/listbox": "^0.2.9",
 		"@react-native-aria/overlays": "^0.3.15",
+		"@react-native-aria/tooltip": "^0.2.9",
 		"@react-navigation/bottom-tabs": "^7.2.0",
 		"@react-navigation/drawer": "^7.1.1",
 		"@react-navigation/native": "^7.0.14",
+		"@react-stately/tooltip": "^3.5.9",
 		"@react-types/shared": "^3.32.1",
 		"@tanstack/react-form": "^1.0.5",
 		"@tanstack/react-query": "^5.90.12",
