feat: add neo-brutalism utility classes

--- a/biome.json
+++ b/biome.json
@@ -75,5 +75,17 @@
 		"parser": {
 			"tailwindDirectives": true
 		}
-	}
+	},
+	"overrides": [
+		{
+			"includes": ["apps/native/global.css"],
+			"linter": {
+				"rules": {
+					"correctness": {
+						"noUnknownProperty": "off"
+					}
+				}
+			}
+		}
+	]
 }
