--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -58,6 +58,7 @@
 		"@tanstack/react-query-devtools": "^5.90.12",
 		"dotenv": "catalog:",
 		"expo": "~54.0.30",
+		"expo-build-properties": "^1.0.10",
 		"expo-clipboard": "^8.0.8",
 		"expo-constants": "~18.0.8",
 		"expo-crypto": "~15.0.6",
@@ -98,13 +99,16 @@
 		"@babel/preset-typescript": "^7.28.5",
 		"@babel/runtime": "^7.28.4",
 		"@expo/config-types": "^54.0.10",
+		"@react-native/gradle-plugin": "0.81.5",
 		"@opencoder/config": "workspace:*",
+		"@opencoder/expo-plugins": "workspace:*",
 		"@testing-library/jest-native": "^5.4.3",
 		"@testing-library/react-native": "^13.3.3",
 		"@types/jest": "29.5.14",
 		"@types/react": "~19.1.10",
 		"babel-jest": "^30.2.0",
 		"babel-plugin-transform-flow-strip-types": "^6.22.0",
+		"babel-preset-expo": "^54.0.9",
 		"jest": "~29.7.0",
 		"jest-expo": "~54.0.16",
 		"typescript": "catalog:"
