--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
 		"test": "turbo test"
 	},
 	"dependencies": {
-		"dotenv": "catalog:",
-		"zod": "catalog:"
+		"dotenv": "^17.2.3",
+		"zod": "^4.3.5"
 	},
 	"devDependencies": {
-		"turbo": "^2.7.2",
+		"turbo": "^2.7.3",
 		"@babel/runtime": "^7.28.4",
-		"@biomejs/biome": "^2.2.0",
+		"@biomejs/biome": "^2.3.11",
 		"husky": "^9.1.7",
-		"lint-staged": "^16.1.2",
-		"typescript": "catalog:"
+		"lint-staged": "^16.2.7",
+		"typescript": "^5.9.3"
 	},
 	"lint-staged": {
 		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
