--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -16,7 +16,7 @@
 	"jest": {
 		"preset": "jest-expo",
 		"transformIgnorePatterns": [
-			"node_modules/(?!((?:\\.bun/.+?/node_modules/)?((jest-)?react-native|@react-native(-community)?|@react-native/.*|expo(nent)?|expo-modules-core|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|uniwind|@opencoder/branding)))"
+			"node_modules/(?!((?:\\.bun/.+?/node_modules/)?((jest-)?react-native|@react-native(-community)?|@react-native/.*|expo(nent)?|expo-modules-core|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|uniwind|@opencoder/branding|nuqs)))"
 		],
 		"moduleNameMapper": {
 			"^@/(.*)$": "<rootDir>/$1"
@@ -74,6 +74,7 @@
 		"expo-status-bar": "~3.0.7",
 		"expo-system-ui": "~6.0.7",
 		"expo-web-browser": "~15.0.10",
+		"nuqs": "2.8.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hotkeys-hook": "^5.2.1",
