refactor(native): unify projects list components and fix lint warnings
- Extract projects-list module with shared components:
  - utils.ts: isAgentUnhealthyError, getProjectListState
  - project-row.tsx: unified row component
  - project-section-header.tsx: section header
  - agent-status.tsx: AgentUnavailableMessage
  - projects-list-content.tsx: main content with variant prop

- Update shared.tsx and projects.tsx to use unified components
- Remove unused isCreating parameter from SessionSidebarContent
- Replace any types with proper interfaces in test/mock files
- Add __mocks__ to biome ignore list

Closes: oc-7bt

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,7 @@
 			"!**/wrangler.jsonc",
 			"!**/.source",
 			"!**/convex/_generated",
+			"!**/__mocks__",
 			"!**/uniwind-types.d.ts",
 			"!.agent/skills",
 			"!.opencode/skill",
