--- a/packages/branding/package.json
+++ b/packages/branding/package.json
@@ -19,6 +19,7 @@
 		"@opencoder/config": "workspace:*",
 		"@types/bun": "^1.3.4",
 		"@types/node": "catalog:",
+		"@types/react": "^19.0.2",
 		"@types/opentype.js": "^1.3.8",
 		"@resvg/resvg-js": "^2.6.2",
 		"bun-types": "^1.3.5",
