fix: resolve priority bugs - Jest OOM, SSE event stream
- oc-i37: Add NODE_OPTIONS=--max-old-space-size=8192 to test script
- oc-kpv: Call _setupEventStream after successful OpenCode connection
- oc-973: Verified WorkspaceNavProvider fix already landed (f3c084c)
- Remove duplicate test key in package.json
- Fix lint warnings in MessageBody.test.tsx

All quality gates pass: 225 tests, lint, types

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		}
 	},
 	"scripts": {
+		"test": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test",
 		"check": "biome check --unsafe --write .",
 		"prepare": "husky",
 		"dev": "turbo dev",
@@ -22,8 +23,7 @@
 		"check-types": "turbo check-types",
 		"typecheck": "turbo check-types",
 		"dev:native": "turbo -F native dev",
-		"dev:web": "turbo -F native web",
-		"test": "turbo test"
+		"dev:web": "turbo -F native web"
 	},
 	"dependencies": {
 		"dotenv": "^17.2.3",
