--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,8 @@
 			"dependsOn": ["^check-types"]
 		},
 		"test": {
-			"dependsOn": ["^test"]
+			"dependsOn": ["^test"],
+			"env": ["NODE_OPTIONS"]
 		},
 		"dev": {
 			"cache": false,
